[gd_scene load_steps=6 format=3 uid="uid://dg8pm3k7yawtn"]

[ext_resource type="Script" uid="uid://c451dfvrbvq5" path="res://scripts/GameMap.gd" id="1_map"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.2, 0.2, 0.25, 0.95)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_normal"]
bg_color = Color(0.25, 0.25, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pressed"]
bg_color = Color(0.35, 0.35, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hover"]
bg_color = Color(0.35, 0.35, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="GameMap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_map")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="BrightnessOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="TopBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="MapNameLabel" type="Label" parent="TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "地图名称"
vertical_alignment = 1

[node name="VSeparator" type="ColorRect" parent="TopBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(2, 50)
layout_mode = 2
color = Color(0.4, 0.4, 0.4, 0.5)

[node name="PlayerInfoLabel" type="Label" parent="TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "位置: (0,0)"
vertical_alignment = 1

[node name="VSeparator2" type="ColorRect" parent="TopBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(2, 50)
layout_mode = 2
color = Color(0.4, 0.4, 0.4, 0.5)

[node name="PowerLabel" type="Label" parent="TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 18
text = "总力量: 0"
vertical_alignment = 1

[node name="VSeparator3" type="ColorRect" parent="TopBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(2, 50)
layout_mode = 2
color = Color(0.4, 0.4, 0.4, 0.5)

[node name="ExplorationLabel" type="Label" parent="TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.9, 1, 1)
theme_override_font_sizes/font_size = 18
text = "探索: 0%"
vertical_alignment = 1

[node name="Spacer" type="Control" parent="TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InventoryButton" type="Button" parent="TopBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
text = "背包"

[node name="ExitButton" type="Button" parent="TopBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
text = "退出地图"

[node name="VSeparator4" type="ColorRect" parent="TopBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(2, 0)
layout_mode = 2
color = Color(0.5, 0.5, 0.5, 1)

[node name="EvacuationLabel" type="Label" parent="TopBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainContent" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="GridPanel" type="Panel" parent="MainContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="GridContainer" type="Control" parent="MainContent/GridPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MessageDialog" type="AcceptDialog" parent="."]
title = "提示"
initial_position = 1
size = Vector2i(400, 150)
ok_button_text = "确定"

[node name="ConfirmDialog" type="ConfirmationDialog" parent="."]
title = "确认"
initial_position = 1
size = Vector2i(400, 150)
ok_button_text = "确定"
cancel_button_text = "取消"

[connection signal="pressed" from="TopBar/MarginContainer/HBoxContainer/InventoryButton" to="." method="_on_inventory_button_pressed"]
[connection signal="pressed" from="TopBar/MarginContainer/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="confirmed" from="ConfirmDialog" to="." method="_on_exit_confirmed"]
